--- a/platformio.ini
+++ b/platformio.ini
@@ -14,22 +14,12 @@ board = unihiker_k10
 framework = arduino
 monitor_speed = 115200
 test_build_src = yes
-board_build.partitions = partitions.csv
 board_build.filesystem = littlefs
 board_upload.flash_size = 16MB
 board_upload.filesystem_partition = voice_data
+
 build_flags = -std=c++17
-board_build.embed_txtfiles =
-    data/www/HTTPService.html  
-    data/www/HTTPService.js  
-    data/www/index.html  
-    data/www/K10webcam.html  
-    data/www/K10webcam.js  
-    data/www/ServoService.html  
-    data/www/ServoService.js  
-    data/www/style.css
-
-
 lib_deps = 
-    Preferences@^2.0.0
-    bblanchon/ArduinoJson@^7.2.1
+	Preferences@^2.0.0
+	bblanchon/ArduinoJson@^7.2.1
+	johnosbb/MicroTFLite @ ^1.0.4
