--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,11 @@ board_build.filesystem = littlefs
 board_upload.flash_size = 16MB
 board_upload.filesystem_partition = voice_data
 
-build_flags = -std=c++17
+build_flags = 
+	-std=c++17
+	-DCORE_DEBUG_LEVEL=3
+	-DLOG_LOCAL_LEVEL=ESP_LOG_WARN
+	-DCONFIG_LOG_COLORS=0
 lib_deps = 
 	Preferences@^2.0.0
 	bblanchon/ArduinoJson@^7.2.1
